Change to notebook

--- a/HW2-ML.ipynb
+++ b/HW2-ML.ipynb
@@ -254,35 +254,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": null,
    "id": "3023d7b4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Column Header : ['totalyearlycompensation', 'yearsofexperience', 'yearsatcompany', 'Age', 'Height', 'Zodiac', 'SAT', 'GPA']\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[('totalyearlycompensation', 138557.21157590026),\n",
-       " ('yearsofexperience', -4.501395915914933e-11),\n",
-       " ('yearsatcompany', 3.835874977778506e-11),\n",
-       " ('Age', -3.54914771887045e-11),\n",
-       " ('Height', -2.8915444479955723e-12),\n",
-       " ('Zodiac', -1.795572005915128e-11),\n",
-       " ('SAT', 5.7628811508978064e-12),\n",
-       " ('GPA', -7.464918580854543e-11)]"
-      ]
-     },
-     "execution_count": 316,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Using ridge regression to find optimal lambda: a scikit-learn implementation\n",
     "# Load libraries:\n",
@@ -311,7 +286,7 @@
     "LR_coef = L_R[-1].coef_\n",
     "\n",
     "list(zip(column_headers, LR_coef))\n",
-    "\n"
+    "print(\"foo\")\n"
    ]
   },
   {
