--- a/HW2-ML.ipynb
+++ b/HW2-ML.ipynb
@@ -38,7 +38,8 @@
     "from sklearn.pipeline import make_pipeline\n",
     "import seaborn as sns\n",
     "from sklearn import metrics\n",
-    "%matplotlib inline\n"
+    "%matplotlib inline\n",
+    "print(\"bar\")"
    ]
   },
   {
