--- a/HW2-ML.ipynb
+++ b/HW2-ML.ipynb
@@ -39,7 +39,8 @@
     "import seaborn as sns\n",
     "from sklearn import metrics\n",
     "%matplotlib inline\n",
-    "print(\"bar\")"
+    "print(\"bar\")\n",
+    "print(\"baz\")"
    ]
   },
   {
